--- a/resume.tex
+++ b/resume.tex
@@ -108,7 +108,7 @@
       {First Year - CGPA: \textbf{10.0}}{Second Year, currently ongoing}
 
     \resumeSubheading
-      {Seth Hirachand Mutha School (CBSE Board)}{\textbf{Kalyan, Thane}}
+      {Seth Hirachand Mutha School (CBSE Board)}{\textbf{Kalyan, India}}
       {Class XII - \textbf{86\%}}{2024}
     \resumeSubSubheading
       {Class X - \textbf{91\%}}{2022}
