--- a/resume.tex
+++ b/resume.tex
@@ -4,6 +4,7 @@
 % Based off of: https://github.com/sb2nov/resume
 % Customised by : Ankush Kapoor
 % Github repo : https://github.com/ankushhKapoor/resume
+% Hosted link : https://resume-ankushhkapoor.vercel.app
 % License : MIT
 %------------------------
 
