--- a/resume.tex
+++ b/resume.tex
@@ -97,7 +97,7 @@
     \small +91 8108405154 $|$  \href{https://ankushhkapoor.vercel.app}{\underline{ankushhkapoor.vercel.app}} $|$
     \href{mailto:work.ankushkapoor1626@gmail.com}{\underline{work.ankushkapoor1626@gmail.com}} \\
     \href{https://github.com/ankushhKapoor}{\underline{github.com/ankushhKapoor}} $|$
-    % \href{https://linkedin.com/in/ankushhKapoor}{\underline{linkedin.com/in/ankushhKapoor}}
+    \href{https://linkedin.com/in/ankushhKapoor}{\underline{linkedin.com/in/ankushhKapoor}}
 \end{center}
 
 %-----------EDUCATION-----------
