--- a/resume.tex
+++ b/resume.tex
@@ -120,7 +120,7 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Open World Holidays Framework (Open Source Contributor)}{Jan 2025 -- Present}
+      {Open World Holidays Framework (Open Source Contributor)}{Jan 2025 -- June 2025}
       {Python Framework}{Remote — \href{https://github.com/vacanza/holidays/pulls/ankushhKapoor}{\underline{PRs}}}
       \resumeItemListStart
         \resumeItem{Ranked \textbf{7th out of 2300+ contributors} nationally in Google Winter of Code (WoC) 2024.}
