Added Extra Curricular Activity section
Added section to display OTC work

--- a/resume.tex
+++ b/resume.tex
@@ -133,7 +133,7 @@
 % \end{tabular*}
 
 \begin{center}
-    {\huge \scshape \textbf{Ankush Kapoor}} \\ \vspace{5pt}
+    {\huge \scshape \textbf{Ankush Kapoor}} \\ \vspace{3pt}
     \small
     +91 8108405154 $|$  \href{https://ankushhkapoor.vercel.app}{\underline{ankushhkapoor.vercel.app}} $|$
     \href{mailto:work.ankushkapoor1626@gmail.com}{\underline{work.ankushkapoor1626@gmail.com}} \\
@@ -150,7 +150,7 @@
             {Bachelor of Technology in Computer Engineering}{Sept 2024 -- Present}
             \resumeItemListStart
                 \resumeItem{First Year - CGPA: \textbf{10.0}}
-                \resumeItem{First Year - CGPA: \textbf{10.0} \hspace{3.984in} Second Year, currently ongoing}
+                \resumeItem{Second Year, currently ongoing}
             \resumeItemListEnd
 
         \resumeSubheading
@@ -170,10 +170,10 @@
     \resumeSubHeadingListStart
         \resumeSubheading
         {Open World Holidays Framework (Open Source Contributor)}{Jan 2025 -- June 2025}
-        {Python Framework}{Remote — \href{https://github.com/vacanza/holidays/pulls/ankushhKapoor}{\underline{PRs}}}
+        {Python Framework}{Remote — \href{https://github.com/vacanza/holidays/pulls/ankushhKapoor}{\underline{GitHub PRs}}}
         \resumeItemListStart
             \resumeItem{Ranked \textbf{7th out of 2300+ contributors} nationally in Google Winter of Code (WoC) 2024.}
-            \resumeItem{Added public holidays for \textbf{India}, \textbf{Nepal}, and \textbf{Mongolia}, covering fixed-date, variable-date, and lunar calendar-based rules.}
+            \resumeItem{Added public holidays for \textbf{India},\kern0.1em\textbf{Nepal},\kern0.1emand\kern0.2em\textbf{Mongolia}, covering fixed and variable dates, and lunar calendar-based rules.}
             \resumeItem{Implemented \textbf{Hindi} and \textbf{Mongolian} translations to improve localization and accessibility.}
             \resumeItem{Wrote and maintained comprehensive \textbf{unit tests} to validate dynamic holiday calculations.}
             \resumeItem{Contributed to a large-scale \textbf{Python-based database} and participated in detailed code reviews.}
@@ -252,33 +252,17 @@
 
 
 % -----------EXTRACURRICULAR ACTIVITY-----------
-% \section{Extracurricular Activity}
-%     \resumeSubHeadingListStart
-%         \resumeSubheading
-%             {\textbf{\normalsize{Our Tech Community (OTC)}} $|$ {\normalfont \href{https://ourtech.community}{ourtech.community}}}{Jan 2020 -- present}
-%             {Organiser}{}
-%             \resumeItemListStart
-%                 \resumeItem{Started a Tech-focused community with 500+ current members}
-%                 \resumeItem{Hosted 800+ hours of \href{https://catchup.ourtech.community}{OTC CatchUp} sessions involving technical discussions, project showcases and talks}
-%             \resumeItemListEnd
-
-%         \resumeSubheading
-%             {\textbf{\normalsize{Talks}} $|$ {\normalfont \href{https://talks.harshkapadia.me}{talks.harshkapadia.me}}}{}
-%             {}{}
-%             \vspace{-15pt}
-%             \resumeItemListStart
-%                 \resumeItem{Impacted 700+ people through talks on \href{https://talks.harshkapadia.me/elf}{ELF files}, \href{https://talks.harshkapadia.me/git_internals}{Git internals}, \href{https://talks.harshkapadia.me/mac-and-ip-routing}{routing using IP and MAC addresses}, and more}
-%             \resumeItemListEnd
-
-%         \resumeSubheading
-%             {\textbf{\normalsize{Articles}}}{}
-%             {}{}
-%             \vspace{-15pt}
-%             \resumeItemListStart
-%                 \resumeItem{Wrote articles on \href{https://git.harshkapadia.me}{Git}, \href{https://talks.harshkapadia.me/elf/content}{ELF files}, \href{https://networking.harshkapadia.me/ssh}{SSH}, \href{https://talks.harshkapadia.me/mac-and-ip-routing/content}{IP and MAC routing}, \href{https://networking.harshkapadia.me/files/homa/report}{Homa}, \href{https://networking.harshkapadia.me/tls}{TLS} and more}
-%             \resumeItemListEnd
-%     \resumeSubHeadingListEnd
-
+\section{Extracurricular Activity}
+    \resumeSubHeadingListStart
+        \resumeSubheading
+            {\textbf{\normalsize{Our Tech Community (OTC)}} $|$ {\normalfont \href{https://ourtech.community}{ourtech.community}}}{Jul 2025 -- Present}
+            {Core Team Member}{}
+            \resumeItemListStart
+                \resumeItem{Part of the core organizing team for \href{https://catchup.ourtech.community}{OTC CatchUp}, a weekly online event where tech enthusiasts share ideas, showcase projects, and hold discussions.}
+                \resumeItem{Manage and grow a vibrant, inclusive, and tech-driven community.}
+            \resumeItemListEnd
+    \resumeSubHeadingListEnd
+\vspace{-15pt}
 
     
 % -----------SKILLS-----------
@@ -293,7 +277,5 @@
             \end{tabular}
         }}
     \end{itemize}
-\vspace{-20pt}
-
 
 \end{document}
