updated tools, env section and removed frameworks

--- a/resume.tex
+++ b/resume.tex
@@ -272,8 +272,8 @@
         {\item{
             \begin{tabular}{ l@{\hskip 0.2in} l }
                  \textbf{Languages}{: C, Python, Java, MySQL, HTML, CSS} \\
-                \textbf{Tools \& Environments}{: Git, GitHub, Linux (Ubuntu/WSL, VirtualBox), VS Code, Neovim, tmux, IntelliJ IDEA} \\
-                \textbf{Frameworks}{: Tailwind CSS}
+                \textbf{Tools \& Environments}{: Git, GitHub, Makefile, Linux, Windows, VS Code, Neovim} \\
+                % \textbf{Frameworks}{: }
             \end{tabular}
         }}
     \end{itemize}
