updated otc section

--- a/resume.tex
+++ b/resume.tex
@@ -258,8 +258,8 @@
             {\textbf{\normalsize{Our Tech Community (OTC)}} $|$ {\normalfont \href{https://ourtech.community}{ourtech.community}}}{Jul 2025 -- Present}
             {Core Team Member}{}
             \resumeItemListStart
-                \resumeItem{Part of the core organizing team for \href{https://catchup.ourtech.community}{OTC CatchUp}, a weekly online event where tech enthusiasts share ideas, showcase projects, and hold discussions.}
-                \resumeItem{Manage and grow a vibrant, inclusive, and tech-driven community.}
+                \resumeItem{As part of the OTC core team, contribute to overseeing flagship initiatives such as CatchUps, Talks, and organizational operations, driving collaboration within the tech community.}
+                \resumeItem{Manage and grow a vibrant, inclusive, and open for all tech-driven community.}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-15pt}
