added research AI project
replaced email unsubscriber with research AI project

--- a/resume.tex
+++ b/resume.tex
@@ -240,22 +240,21 @@
         \vspace{-15pt}
 
         \resumeProjectHeading
+            {\textbf{\normalsize{Advanced Research AI Agent}} $|$ \emph{Python, LangGraph, Ollama, BrightData API}}{\href{https://github.com/ankushhKapoor/Advanced-Research-AI-Agent}{\underline{GitHub}}}
+            \resumeItemListStart
+                \resumeItem{Built an AI research assistant that retrieves data from Google, Bing, and Reddit to generate context-rich answers.}
+                \resumeItem{Used \texttt{LangGraph} for workflow orchestration and \texttt{Ollama LLM} for multi-source reasoning and synthesis.}
+                \resumeItem{Integrated \texttt{BrightData APIs} for automated web search and Reddit discussion analysis.}
+            \resumeItemListEnd
+        \vspace{-15pt}
+
+        \resumeProjectHeading
             {\textbf{\normalsize{CodeNexus (Custom Code Editor for Python)}} $|$ \emph{Python, PyQt5, QScintilla, Jedi}}{\href{https://github.com/ankushhKapoor/CodeNexus-Custom-Python-Editor-IDE}{\underline{GitHub}}}
             \resumeItemListStart
                 \resumeItem{Developed a tab-based code editor with syntax highlighting, file explorer, and autocomplete.}
                 \resumeItem{Implemented a threaded AutoCompleter using \texttt{jedi} and a custom \texttt{QsciLexer}.}
                 \resumeItem{Enabled one-click code execution via \texttt{subprocess} in CMD.}
                 \resumeItem{Integrated file actions with \texttt{QTreeView} and added keyboard shortcuts.}
-            \resumeItemListEnd
-        \vspace{-15pt}
-
-        \resumeProjectHeading
-            {\textbf{\normalsize{Email Unsubscriber (Inbox Automation Tool)}} $|$ \emph{Python, IMAP, SMTP, BeautifulSoup, requests}}{\href{https://github.com/ankushhKapoor/Python-Email-Auto-Unsubscriber}{\underline{GitHub}}}
-            \resumeItemListStart
-                \resumeItem{Automated email unsubscription by scanning Gmail inbox via IMAP and locating unsubscribe links.}
-                \resumeItem{Parsed links using \texttt{BeautifulSoup} and text-matching logic.}
-                \resumeItem{Visited each link via \texttt{requests} and logged success/failure locally.}
-                \resumeItem{Used \texttt{dotenv} to securely manage credentials.}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-15pt}
