--- a/resume.tex
+++ b/resume.tex
@@ -220,14 +220,14 @@
             \resumeItemListEnd
         \vspace{-15pt}
 
-        \resumeProjectHeading
-            {\textbf{\normalsize{KapoorVM (Custom Virtual Machine in C)}} $|$ \emph{C, Linux, GCC}}{\href{https://github.com/ankushhKapoor/KapoorVM}{\underline{GitHub}}}
-            \resumeItemListStart
-                \resumeItem{Built a 16-bit virtual CPU with a custom instruction set and 65 KB of virtual memory.}
-                \resumeItem{Implemented basic opcodes to move immediate values into registers and run a test program.}
-                \resumeItem{Designed modular VM components for clean separation of CPU, memory, and instruction handling.}
-            \resumeItemListEnd
-        \vspace{-15pt}
+        % \resumeProjectHeading
+        %     {\textbf{\normalsize{KapoorVM (Custom Virtual Machine in C)}} $|$ \emph{C, Linux, GCC}}{\href{https://github.com/ankushhKapoor/KapoorVM}{\underline{GitHub}}}
+        %     \resumeItemListStart
+        %         \resumeItem{Built a 16-bit virtual CPU with a custom instruction set and 65 KB of virtual memory.}
+        %         \resumeItem{Implemented basic opcodes to move immediate values into registers and run a test program.}
+        %         \resumeItem{Designed modular VM components for clean separation of CPU, memory, and instruction handling.}
+        %     \resumeItemListEnd
+        % \vspace{-15pt}
 
         \resumeProjectHeading
             {\textbf{\normalsize{Alloc (Custom Memory Allocator in C)}} $|$ \emph{C, Linux, NASM, GCC}}{\href{https://github.com/ankushhKapoor/alloc}{\underline{GitHub}}}
@@ -249,15 +249,27 @@
         \vspace{-15pt}
 
         \resumeProjectHeading
-            {\textbf{\normalsize{CodeNexus (Custom Code Editor for Python)}} $|$ \emph{Python, PyQt5, QScintilla, Jedi}}{\href{https://github.com/ankushhKapoor/CodeNexus-Custom-Python-Editor-IDE}{\underline{GitHub}}}
+            {\textbf{\normalsize{WikiSpeedRunner (AI Wikipedia Speedrun Agent)}} $|$ \emph{Python, SBERT, Gemini API, Playwright}}{\href{https://github.com/ankushhKapoor/WikiSpeedRunner}{\underline{GitHub}}}
             \resumeItemListStart
-                \resumeItem{Developed a tab-based code editor with syntax highlighting, file explorer, and autocomplete.}
-                \resumeItem{Implemented a threaded AutoCompleter using \texttt{jedi} and a custom \texttt{QsciLexer}.}
-                \resumeItem{Enabled one-click code execution via \texttt{subprocess} in CMD.}
-                \resumeItem{Integrated file actions with \texttt{QTreeView} and added keyboard shortcuts.}
+                \resumeItem{Built an agent that speedruns through Wikipedia pages by selecting the most relevant outgoing link at each step.}
+                \resumeItem{Implemented two players: a fast \texttt{SBERT} vector-similarity model and a reasoning-based \texttt{Gemini LLM} agent for accurate pathfinding.}
+                \resumeItem{Automated gameplay using \texttt{Playwright}: scrolling, locating links, expanding collapsible sections, highlighting targets, and clicking pages.}
+                \resumeItem{Added run tracking with JSON logging, performance metrics, and optional browser visualisation for real-time playback.}
             \resumeItemListEnd
-    \resumeSubHeadingListEnd
-\vspace{-15pt}
+        \resumeSubHeadingListEnd
+    \vspace{-15pt}
+
+
+%         \resumeProjectHeading
+%             {\textbf{\normalsize{CodeNexus (Custom Code Editor for Python)}} $|$ \emph{Python, PyQt5, QScintilla, Jedi}}{\href{https://github.com/ankushhKapoor/CodeNexus-Custom-Python-Editor-IDE}{\underline{GitHub}}}
+%             \resumeItemListStart
+%                 \resumeItem{Developed a tab-based code editor with syntax highlighting, file explorer, and autocomplete.}
+%                 \resumeItem{Implemented a threaded AutoCompleter using \texttt{jedi} and a custom \texttt{QsciLexer}.}
+%                 \resumeItem{Enabled one-click code execution via \texttt{subprocess} in CMD.}
+%                 \resumeItem{Integrated file actions with \texttt{QTreeView} and added keyboard shortcuts.}
+%             \resumeItemListEnd
+%     \resumeSubHeadingListEnd
+% \vspace{-15pt}
 
 
 % -----------EXTRACURRICULAR ACTIVITY-----------
